fixed bug deleting tmp folder at end of script

--- a/Slack-Unprivatomator.ipynb
+++ b/Slack-Unprivatomator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "33c35763-7fce-4b8d-aeb0-86e2d065634b",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,16 @@
     "import zipfile\n",
     "\n",
     "# First of all you must obtain an access token by exporting some data from Slack\n",
-    "INPUT_PATH = r'YOUR-SLACK-EXPORT-HERE.zip'\n",
-    "OUTPUT_PATH = r'YOUR\\OUTPUT\\DIR\\HERE'\n",
+    "INPUT_PATH = r'C:\\Users\\SimonTucker\\BackuperyForSlack_Storage\\2023_January_08-15_41_57\\ReadyToImport\\ONI_2023_January_08-15_44_33.zip'\n",
+    "OUTPUT_PATH = r'C:\\Users\\SimonTucker\\Desktop\\OUTPUT'\n",
+    "# INPUT_PATH = r'YOUR-SLACK-EXPORT-HERE.zip'\n",
+    "# OUTPUT_PATH = r'YOUR\\OUTPUT\\DIR\\HERE'\n",
     "TOKEN = os.environ.get('TOKEN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cf582590",
    "metadata": {},
    "outputs": [],
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "33b9ad9b",
    "metadata": {},
    "outputs": [],
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0efec792-3eda-46f7-ad3f-237be165c4e4",
    "metadata": {},
    "outputs": [],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e3064716-7269-49de-aa01-859f55baefa8",
    "metadata": {},
    "outputs": [],
@@ -95,25 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5e1678d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[WinError 32] The process cannot access the file because it is being used by another process: 'C:\\\\Users\\\\SimonTucker\\\\BackuperyForSlack_Storage\\\\2023_January_08-15_41_57\\\\ReadyToImport\\\\tmp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m     fname \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(tmp_dir, json_file)\n\u001b[0;32m     15\u001b[0m     shutil\u001b[38;5;241m.\u001b[39mmove(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(fname), OUTPUT_PATH)\n\u001b[1;32m---> 17\u001b[0m \u001b[43mshutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrmtree\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtmp_dir\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\shutil.py:757\u001b[0m, in \u001b[0;36mrmtree\u001b[1;34m(path, ignore_errors, onerror)\u001b[0m\n\u001b[0;32m    755\u001b[0m     \u001b[39m# can't continue even if onerror hook returns\u001b[39;00m\n\u001b[0;32m    756\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m--> 757\u001b[0m \u001b[39mreturn\u001b[39;00m _rmtree_unsafe(path, onerror)\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\shutil.py:631\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onerror)\u001b[0m\n\u001b[0;32m    629\u001b[0m     os\u001b[39m.\u001b[39mrmdir(path)\n\u001b[0;32m    630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[1;32m--> 631\u001b[0m     onerror(os\u001b[39m.\u001b[39;49mrmdir, path, sys\u001b[39m.\u001b[39;49mexc_info())\n",
-      "File \u001b[1;32m~\\miniconda3\\lib\\shutil.py:629\u001b[0m, in \u001b[0;36m_rmtree_unsafe\u001b[1;34m(path, onerror)\u001b[0m\n\u001b[0;32m    627\u001b[0m             onerror(os\u001b[39m.\u001b[39munlink, fullname, sys\u001b[39m.\u001b[39mexc_info())\n\u001b[0;32m    628\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 629\u001b[0m     os\u001b[39m.\u001b[39;49mrmdir(path)\n\u001b[0;32m    630\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mOSError\u001b[39;00m:\n\u001b[0;32m    631\u001b[0m     onerror(os\u001b[39m.\u001b[39mrmdir, path, sys\u001b[39m.\u001b[39mexc_info())\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [WinError 32] The process cannot access the file because it is being used by another process: 'C:\\\\Users\\\\SimonTucker\\\\BackuperyForSlack_Storage\\\\2023_January_08-15_41_57\\\\ReadyToImport\\\\tmp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(os.getcwd())\n",
     "\n",
@@ -131,6 +118,7 @@
     "    fname = os.path.join(tmp_dir, json_file)\n",
     "    shutil.move(os.path.join(fname), OUTPUT_PATH)\n",
     "\n",
+    "os.chdir(OUTPUT_PATH)\n",
     "shutil.rmtree(tmp_dir)\n"
    ]
   }
