fixed bug deleting tmp folder at end of script

--- a/Slack-Unprivatomator.ipynb
+++ b/Slack-Unprivatomator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "33c35763-7fce-4b8d-aeb0-86e2d065634b",
    "metadata": {},
    "outputs": [],
@@ -15,16 +15,14 @@
     "import zipfile\n",
     "\n",
     "# First of all you must obtain an access token by exporting some data from Slack\n",
-    "INPUT_PATH = r'C:\\Users\\SimonTucker\\BackuperyForSlack_Storage\\2023_January_08-15_41_57\\ReadyToImport\\ONI_2023_January_08-15_44_33.zip'\n",
-    "OUTPUT_PATH = r'C:\\Users\\SimonTucker\\Desktop\\OUTPUT'\n",
-    "# INPUT_PATH = r'YOUR-SLACK-EXPORT-HERE.zip'\n",
-    "# OUTPUT_PATH = r'YOUR\\OUTPUT\\DIR\\HERE'\n",
+    "INPUT_PATH = r'YOUR-SLACK-EXPORT-HERE.zip'\n",
+    "OUTPUT_PATH = r'YOUR\\OUTPUT\\DIR\\HERE'\n",
     "TOKEN = os.environ.get('TOKEN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cf582590",
    "metadata": {},
    "outputs": [],
@@ -36,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "33b9ad9b",
    "metadata": {},
    "outputs": [],
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0efec792-3eda-46f7-ad3f-237be165c4e4",
    "metadata": {},
    "outputs": [],
@@ -69,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e3064716-7269-49de-aa01-859f55baefa8",
    "metadata": {},
    "outputs": [],
@@ -97,13 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c5e1678d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(os.getcwd())\n",
-    "\n",
     "with open('groups.json', 'r') as f:\n",
     "    string = f.read()\n",
     "string = string.replace('\"is_group\": true', '\"is_group\": false')\n",
